Added a 7th database field for painting collection
