# swagger-output.json
@@ -40,6 +40,10 @@
                   "type": "string",
                   "example": "any"
                 },
+                "condition": {
+                  "type": "string",
+                  "example": "any"
+                },
                 "tags": {
                   "type": "array",
                   "example": ["any"],
@@ -136,6 +140,10 @@
                   "example": "any"
                 },
                 "year": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "condition": {
                   "type": "string",
                   "example": "any"
                 },
